A bit of refactoration